--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<router-outlet></router-outlet>
+<div class="container" style="margin-top: 15px">
+  <header>
+    <app-header></app-header>
+  </header>
+  <body style="margin-bottom: 80px">
+    <router-outlet></router-outlet>
+  </body>
+  <footer style="margin-bottom: 80px"></footer>
+</div>
