Creación del footer de la aplicación

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,11 @@
 <div class="container" style="margin-top: 15px">
   <header>
     <app-header></app-header>
-  </header>
+  </header> 
   <body style="margin-bottom: 80px">
     <router-outlet></router-outlet>
   </body>
-  <footer style="margin-bottom: 80px"></footer>
+  <footer style="margin-bottom: 80px">
+    <app-footer></app-footer>
+  </footer>
 </div>
