--- a/src/app/Header/header/header.component.html
+++ b/src/app/Header/header/header.component.html
@@ -31,7 +31,7 @@
             ADMINISTRACIÓN
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" routerLink="roles">Roles</a></li>
+            <li><a class="dropdown-item" routerLink="roles-list">Roles</a></li>
           </ul>
         </li>
       </ul>
