--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
 <div class="container" style="margin-top: 15px">
   <header>
     <app-header></app-header>
-  </header> 
+  </header>
   <body style="margin-bottom: 80px">
     <router-outlet></router-outlet>
+    <lib-ng-toast></lib-ng-toast>
   </body>
   <footer style="margin-bottom: 80px">
     <app-footer></app-footer>
