--- a/src/app/Header/header/header.component.html
+++ b/src/app/Header/header/header.component.html
@@ -40,6 +40,7 @@
         <a
           class="btn btn-outline-primary btn-sm my-2 my-sm-0"
           style="margin-left: 15px"
+          routerLink="signup"
         >
           REGISTRAR</a
         >
