--- a/src/app/Role/create-role/create-role.component.html
+++ b/src/app/Role/create-role/create-role.component.html
@@ -40,7 +40,7 @@
                 class="btn btn-primary btn-sm"
                 [disabled]="!isValidForm()"
               >
-                {{ namebutton }}
+                {{ nameButton }}
               </button>
               <button
                 type="reset"
