--- a/src/app/Role/list-roles/list-roles.component.html
+++ b/src/app/Role/list-roles/list-roles.component.html
@@ -9,7 +9,7 @@
       ><i class="fa fa-plus-square" aria-hidden="true"></i>Crear role</a
     >
   </div>
-  <table class="table table-hover">
+  <table class="table table-hover" *ngIf="showTable">
     <thead class="table-dark">
       <tr class="text-center">
         <th>Nombre</th>
