Creación del componente Users para listar los usuarios de la aplicación; también se puede eliminar y desactivar usuarios

--- a/src/app/Header/header/header.component.html
+++ b/src/app/Header/header/header.component.html
@@ -31,7 +31,9 @@
             ADMINISTRACIÓN
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" routerLink="roles-list">Roles</a></li>
+            <li><a class="dropdown-item" routerLink="list-roles">Roles</a></li>
+            <li><hr class="dropdown-divider" /></li>
+            <li><a class="dropdown-item" routerLink="list-users">Users</a></li>
           </ul>
         </li>
       </ul>
