--- a/src/app/Footer/footer/footer.component.html
+++ b/src/app/Footer/footer/footer.component.html
@@ -80,7 +80,7 @@
       <div class="copyright">
         <p>
           Desarrollado y mantenido por
-          <a href="#" target="_blank">José Parra</a>
+          <a routerLink="/home">José Parra</a>
         </p>
       </div>
     </div>
