--- a/src/app/Signup/signup/signup.component.html
+++ b/src/app/Signup/signup/signup.component.html
@@ -1,3 +1,4 @@
+<app-menu></app-menu>
 <div class="bootstrap-wrapper">
   <div class="container">
     <div class="row" style="margin-top: 20px">
@@ -24,7 +25,7 @@
                   *Por favor, ingrese su nombre de usuario.
                 </div>
               </div>
-              <div class="mb-3">
+              <div class="mb-3" *ngIf="!isEdit">
                 <label class="form-label">Password:</label>
                 <input
                   required
@@ -106,6 +107,7 @@
                 {{ nameButton }}
               </button>
               <button
+                *ngIf="!isEdit"
                 type="reset"
                 class="btn btn-primary btn-sm"
                 style="margin-left: 15px"
@@ -117,6 +119,7 @@
                 routerLink=""
                 role="button"
                 style="margin-left: 15px"
+                routerLink="/list-users"
               >
                 Cancelar
               </a>
